<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyShop</string>
    <string name="registration_title_name">MyShop</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="hint_user_full_name">Full Name</string>
    <string name="hint_user_last_name">Last Name</string>
    <string name="hint_user_email">Email</string>
    <string name="hint_user_mobile">Mobile no</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_new_password">Change password</string>
    <string name="login">Login</string>
    <string name="registration">Register</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="create_account">Let\'s create your account</string>
    <string name="my_profile">My Profile</string>
    <string name="title_category">Categories</string>
    <string name="title_sub_category">Sub Cater</string>
    <string name="profile_update_msg">Profile has been updated</string>
    <string name="button_text_post_new">Create an adv</string>
    <string name="button_text_location">Dhaka, Bangladesh</string>
    <string name="data_not_found">Data not found</string>
    <string name="data_post_success">Your ad has been posted successfully.</string>
    <string name="latest_prod_title">Latest in computer</string>
    <string name="connection_timeout">Connection is timeout</string>
    

    <color name="light_green">#1E8E66</color>
    <color name="red_orange">#F1705D</color>
    <color name="white">#FFFFFF</color>
    <color name="light_gray">#DDDDDD</color>
    <color name="deep_red">#E84C3D</color>
    <color name="black">#E84C3D</color>
    <color name="button_pressed_color">#A11607</color>
    <color name="transparent_pressed_color">#EAEBEB</color>
    
    

</resources>