<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:background="@drawable/button_selector"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_border"
        android:orientation="vertical"
        android:padding="@dimen/activity_around_padding" >

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_action_about"
            android:drawablePadding="@dimen/activity_around_padding"
            android:ems="10"
            android:hint="@string/hint_user_full_name"
            android:maxLength="15"
            android:padding="@dimen/activity_around_padding"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_action_about"
            android:drawablePadding="@dimen/activity_around_padding"
            android:ems="10"
            android:hint="@string/hint_user_last_name"
            android:padding="@dimen/activity_around_padding"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawablePadding="@dimen/activity_around_padding"
            android:ems="10"
            android:hint="@string/hint_user_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/activity_around_padding"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_action_gamepad"
            android:drawablePadding="@dimen/activity_around_padding"
            android:ems="10"
            android:hint="@string/hint_current_password"
            android:inputType="textPassword"
            android:padding="@dimen/activity_around_padding"
            android:singleLine="true"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <EditText
            android:id="@+id/edit_text_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_action_gamepad"
            android:drawablePadding="@dimen/activity_around_padding"
            android:ems="10"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:padding="@dimen/activity_around_padding"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/my_profile"
        android:textColor="@color/light_green"
        android:textSize="@dimen/title_font_size" />

</RelativeLayout>