<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:gravity="center_vertical" >

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:background="@drawable/button_selector"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/round_border"
        android:orientation="vertical"
        android:padding="@dimen/activity_around_padding" >

        <EditText
            android:id="@+id/edit_text_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawablePadding="@dimen/activity_around_padding"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:hint="@string/hint_user_email"
            android:padding="@dimen/activity_around_padding" >

            <requestFocus />
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_action_gamepad"
            android:drawablePadding="@dimen/activity_around_padding"
            android:ems="10"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:padding="@dimen/activity_around_padding" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignRight="@+id/btn_login"
        android:layout_marginTop="@dimen/register_margin"
        android:textStyle="bold"
        android:layout_below="@+id/textView1"
        android:background="@drawable/register_button_selector"
        android:text="@string/register"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white" />

</RelativeLayout>